Add since-start historical API archive
